--- a/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
+++ b/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
@@ -140,7 +140,37 @@ const data_card_5 = {
         aria-hidden="false"
         tabindex="-1"
       >
-        <SuspectCard {...data_card_1} />
+        <div class="suspect-card--mobile--only">
+          <div class="suspect-card">
+            <div class="suspect-card_bordered-item suspect-card_bordered-title">
+              <h3 class="suspect-card_title">
+                Differential diagnoses for hypophosphatasia with shared
+                symptoms:
+              </h3>
+            </div>
+          </div>
+          <SuspectCard {...data_card_1} />
+        </div>
+        <div class="suspect-card--desktop--only">
+          <div class="wrapper suspect-card__cards-container">
+            <div class="suspect-card">
+              <div
+                class="suspect-card_bordered-item suspect-card_bordered-title"
+              >
+                <h3 class="suspect-card_title">
+                  Differential diagnoses for hypophosphatasia with shared
+                  symptoms:
+                </h3>
+              </div>
+            </div>
+            <div class="cards__grid_container">
+              <SuspectCard {...data_card_1} />
+              <SuspectCard {...data_card_2} />
+              <SuspectCard {...data_card_3} />
+              <SuspectCard {...data_card_4} />
+            </div>
+          </div>
+        </div>
       </section>
 
       <section
@@ -187,7 +217,7 @@ const data_card_5 = {
         class="usual-suspects-tab_section"
         data-target="usual-suspects_children-adolescent-tab5"
         role="tabpanel"
-        aria-labelledby="tab4"
+        aria-labelledby="tab5"
         aria-hidden="true"
         tabindex="-1"
         hidden
@@ -196,16 +226,44 @@ const data_card_5 = {
       </section>
     </article>
 
-    <p class="usual-suspect__note">
-      View the full list of suspects, shared symptoms, and how to differentiate
-      from hypophosphatasia:
-    </p>
+    <div class="wrapper suspect-card__cards-container">
+      <div class="suspect-card--foot">
+        <p class="usual-suspect__note">
+          View the full list of suspects, shared symptoms, and how to
+          differentiate from hypophosphatasia:
+        </p>
 
-    <div class="usual-suspect__trigger">
-      <button
-        class="button btn--usual-suspect-modal-trigger"
-        data-target="infants-modal">View List</button
-      >
+        <div class="usual-suspect__trigger">
+          <button
+            class="button btn--usual-suspect-modal-trigger"
+            data-target="infants-modal">View List</button
+          >
+        </div>
+      </div>
     </div>
   </section>
+  <ModalMobile />
 </section>
+<style>
+  .mobile--only {
+    display: block;
+    @media screen and (min-width: 1024px) {
+      display: none;
+    }
+  }
+  .desktop--only {
+    display: none;
+    @media screen and (min-width: 1024px) {
+      display: block;
+    }
+  }
+  .cards__grid_container {
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+  }
+  .usual-suspect__subtabs {
+    @media screen and (min-width: 1024px) {
+      display: none !important;
+    }
+  }
+</style>
