--- a/src/pages/hpp-profile.astro
+++ b/src/pages/hpp-profile.astro
@@ -70,10 +70,10 @@ const internalNavLinks = [
       <div class="wrapper">
         <div class="hpp__profile__red-frame-disclaimer">
             <p
-              class="hpp__profile__paragraph hpp__profile__paragraph--sub hpp__profile__red-frame-disclaimer--content text--center"
+              class="hpp__profile__paragraph hpp__profile__paragraph--sub hpp__profile__red-frame-disclaimer--content text--center color--black md:color--white"
             >
               Hypophosphatasia may become debilitating and can cause damage to
-              <span class="hpp__profile__red-frame-disclaimer--text-red md:color--white"
+              <span class="hpp__profile__red-frame-disclaimer--text-red md:color--white color--cinnabar"
                 >multiple systems</span
               > in the body beyond the skeletal system.<sup>3-5</sup>
             </p>
