✨ Add page hero

--- a/src/components/Navigation/HeaderPrimaryNavigation.astro
+++ b/src/components/Navigation/HeaderPrimaryNavigation.astro
@@ -11,7 +11,7 @@
         <a href="/hpp-profile" class="nav__menu_item_link">HPP Profile</a>
       </li>
       <li class="nav__menu_item">
-        <a href="/usual-suspects-2/" class="nav__menu_item_link">Usual Suspects</a>
+        <a href="/usual-suspects" class="nav__menu_item_link">Usual Suspects</a>
       </li>
       <li class="nav__menu_item">
         <a href="/identifying-hpp" class="nav__menu_item_link">Identifying HPP</a>
