--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -35,7 +35,7 @@
 @import './components/_case-file-modal.scss';
 @import './components/_suspect-card.scss';
 @import './components/stay-connected.scss';
-@import './components/usual-suspects.scss';
+@import './components/usual-suspects';
 @import './components/_skeleton.scss';
 @import './components/_usual-supect-modal.scss';
 
