--- a/src/components/Navigation/FooterPrimaryNav.astro
+++ b/src/components/Navigation/FooterPrimaryNav.astro
@@ -10,7 +10,7 @@
       <a class="footer__nav_menu_item_link" href="#">HPP Profile</a>
     </li>
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="#">Usual Suspects</a>
+      <a class="footer__nav_menu_item_link" href="/usual-suspects">Usual Suspects</a>
     </li>
     <li class="footer__nav_menu_item">
       <a class="footer__nav_menu_item_link" href="/indentifying-hpp">Identifying HPP</a>
