--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3883,8 +3883,8 @@
 
                 @media screen and (min-width: 1024px) {
                     font-size: 5.125rem;
-                    align-items: flex-end;
-                    padding-bottom: 1.5rem;
+                    align-items: center;
+                    padding-bottom: 0;
                 }
             }
 
