--- a/src/components/usual-suspects/MobileSelector.astro
+++ b/src/components/usual-suspects/MobileSelector.astro
@@ -12,6 +12,7 @@ import ChildrenTab from "./tabs/ChildrenTab.astro";
     </h2>
 
     <article class="hpp-multisystemic__tabs">
+        <div class="red-string"></div>
       <ul role="tablist" class="hpp-multisystemic__tabs--nav">
         <li role="presentation" class="hpp-multisystemic__tabs--nav-item">
           <a
