--- a/src/styles/settings/_global.scss
+++ b/src/styles/settings/_global.scss
@@ -64,11 +64,19 @@ sup.symbol-sup {
   top: initial;
 }
 
+.red-string-wrapper {
+    position: relative;
+    height: 2rem;
+}
+
 .red-string {
     border-bottom: 2px solid $color-red;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    position: absolute;
 
     width: calc(100vw + 20rem);
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 body {
