✨ Last section reviewed

--- a/src/pages/usual-suspects.astro
+++ b/src/pages/usual-suspects.astro
@@ -360,32 +360,41 @@ const internalNavLinks = [
                     <span>Persistently low alkaline phosphatase</span> differentiates
                     hypophosphatasia from other conditions<sup>1,9,21,24</sup>
                 </p>
+                <div class="red-string"></div>
             </div>
         </article>
     </section>
 
     <section class="persistently">
-        <h2 class="persistently__title">
-            Persistently low ALP may differentiate HPP from other conditions<sup
-                >22</sup
-            >
-        </h2>
-        <p class="persistently__text modifier">
-            While some conditions may lead to transient decreases in ALP,
-            patients with HPP have persistently <span style="color:#F8BA5D"
-                >low* ALP levels.<sup>†</sup></span
-            > Persistently low ALP levels should raise suspicion of HPP, especially
-            when coupled with common symptoms of HPP such as musculoskeletal pain
-            and/or weakness, premature tooth loss, or previous nontraumatic fractures.1,3
-        </p>
-        <p class="persistently__text">
-            *Persistently low alkaline phosphatase can be defined as having 2
-            exams below normal value at intervals of more than 30 days.<sup
-                >3,19</sup
-            ><br class="br" />
-            <sup>†</sup>Alkaline phosphatase ranges must be age- and
-            sex-adjusted.<sup>3,20</sup>
-        </p>
+        <div class="wrapper">
+
+            <h2 class="persistently__title">
+                Persistently low ALP may differentiate HPP from other conditions<sup
+                    >22</sup
+                >
+            </h2>
+            <p class="persistently__text">
+                While some conditions may lead to transient decreases in ALP,
+                patients with HPP have persistently <span class="color--saffron-mango"
+                    >low* ALP levels.<sup>†</sup></span
+                > Persistently low ALP levels should raise suspicion of HPP, especially
+                when coupled with common symptoms of HPP such as musculoskeletal pain
+                and/or weakness, premature tooth loss, or previous nontraumatic fractures.1,3
+            </p>
+
+            <ul class="persistently__footnote-list">
+                <li>
+                    <sup class="symbol-sup positioned">*</sup>Persistently low alkaline phosphatase can be defined as having 2
+                    exams below normal value at intervals of more than 30 days.<sup
+                        >3,19</sup>
+                </li>
+                <li>
+                    <sup class="symbol-sup positioned">†</sup>Alkaline phosphatase ranges must be age- and
+                    sex-adjusted.<sup>3,20</sup>
+                </li>
+            </ul>
+
+        </div>
     </section>
 
     <section class="usual-levels">
